; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-mpc52xx.c_mpc52xx_spi_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-mpc52xx.c_mpc52xx_spi_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpc52xx_spi = type { i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @mpc52xx_spi_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpc52xx_spi_irq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.mpc52xx_spi*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.mpc52xx_spi*
  store %struct.mpc52xx_spi* %7, %struct.mpc52xx_spi** %5, align 8
  %8 = load %struct.mpc52xx_spi*, %struct.mpc52xx_spi** %5, align 8
  %9 = getelementptr inbounds %struct.mpc52xx_spi, %struct.mpc52xx_spi* %8, i32 0, i32 0
  %10 = call i32 @spin_lock(i32* %9)
  %11 = load i32, i32* %3, align 4
  %12 = load %struct.mpc52xx_spi*, %struct.mpc52xx_spi** %5, align 8
  %13 = call i32 @mpc52xx_spi_fsm_process(i32 %11, %struct.mpc52xx_spi* %12)
  %14 = load %struct.mpc52xx_spi*, %struct.mpc52xx_spi** %5, align 8
  %15 = getelementptr inbounds %struct.mpc52xx_spi, %struct.mpc52xx_spi* %14, i32 0, i32 0
  %16 = call i32 @spin_unlock(i32* %15)
  %17 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %17
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @mpc52xx_spi_fsm_process(i32, %struct.mpc52xx_spi*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
